fix: shorten nav-links gap

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -55,7 +55,7 @@ body {
   display: flex;
   list-style: none;
   align-items: center;
-  gap: 30px;
+  gap: 15px;
 }
 
 .nav-links li {
